--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta3
  	- Added Clear Playlist Functionality to Localplay
  	- Added Language selection to Installer (Thx Ros)
  	- Added xbmc controller (Thx Infamy)
  	- Fixed a problem where if require_session was disabled it would
		still pass the sid with the urls
  	- Fixed problem where jpegs wouldn't get resized (Thx blueorder)
  	- New Install and Update screen styles (Thx Ros)
  	- Fixed a glitch that was causing m3u's to be built on every 
		catalog add, rather then just on creation
	- Tweaked Preferences once more
	- Added Modules Page, used for enabling/disabling localplay
		types
  	- Fixed a missing web_path reference on playlist edit page
	- Added Localplay API, check the wiki for more information
		https://ampache.bountysource.com/wiki/Localplay
  	- Added Download to Random play along with Size limitation
		usefull for downloading a set amount of music for your
		mp3 player.
  	- Fixed mime detection, wasn't strtolowering the value
	- Fixed a few more Charset issues specificaly with Russian 
		(Thx Nikk)

--------------------------------------------------------------------------
  v.3.3.2-Beta2 
  	- Fixed some Charset problems with htmlentities (Thx Nikk)
	- Fixed some issues with IE and session caching (Thx wishbone)
  	- Improved Upload Error Messages and blanked up upload and 
		quarantine directories for non-admin users
  	- Added horrible hack to make Artist sorting work in the Album 
		browse page, this is temp until Ampache 3.4
  	- Fixed a problem with the playlist update confirmation page
  	- Fixed css issues with preferences (Thx WarrenG) 
  	- Added dump album art command line script and tweaked catalog
		build display.