@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.3.2-Beta3
+  	- Added Icecast Controller (Thx Nikk)
   	- Added Clear Playlist Functionality to Localplay
   	- Added Language selection to Installer (Thx Ros)
   	- Added xbmc controller (Thx Infamy)
